# gogol

./: cabal.project  flake.nix  stack-9.0.2.yaml
configs/services/: documentai.json
lib/services/gogol-documentai/: README.md  gogol-documentai.cabal
